@@ -35,6 +35,9 @@ xxx xxx xx xx:xx:xx UTC 2010
 
         Other
 
+        - Support for the diffuse merger (http://diffuse.sourceforge.net)
+          has been added.
+
 Sun Mar 14 21:15:06 UTC 2010
 
         0.47 release.
